# ai-news-agent

./: .env.example  .gitignore  README.md  cli.md  pyproject.toml  requirements.txt
build_plan/: build plan.md  proposed tech stack.md
data/: news-sources.yaml
src/app/: __init__.py  config.py  main.py
src/app/assets/langgraphics_static/: index.html
src/app/assets/langgraphics_static/assets/: index-2DJCpApW.css  index-C_tnL7N6.js
src/app/graph/: __init__.py  state.py  workflow.py
src/app/nodes/: deliver.py  enrich.py  ingest.py  rank.py  summarize.py
src/app/schemas/: article.py
src/app/services/: extractor.py  langgraphics_assets.py  openrouter_client.py  rss_client.py  scoring.py  telegram_client.py  tracing.py
tests/: test_enrich.py  test_ingest.py  test_rank.py  test_summarize.py  test_telegram_format.py
